src-ken&y/objects/ECO_Line__c.object
<CustomObject>
    <customHelpPage>HelpECO</customHelpPage>
    <description>ECO detail lines</description>
    <fields>
        <fullName>ECO__c</fullName>
        <description>ECO</description>
        <label>ECO</label>
        <referenceTo>ECO__c</referenceTo>
        <relationshipLabel>ECO Lines</relationshipLabel>
        <relationshipName>ECO_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>ECO Item</description>
        <label>Item</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Item is not active.</errorMessage>
            <filterItems>
                <field>Item__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>ECO Lines</relationshipLabel>
        <relationshipName>ECO_Lines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Item_Specification__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>New Item Specification</description>
        <label>New Item Specification</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Item_Specification__c.Item__c</field>
                <operation>equals</operation>
                <valueField>$Source.Item__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item_Specification__c</referenceTo>
        <relationshipLabel>ECO Lines</relationshipLabel>
        <relationshipName>ECO_Lines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Revision__c</fullName>
        <description>New Item Specification&apos;s Revision</description>
        <formula>New_Item_Specification__r.Revision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Revision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Item_Specification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Old Item Specification</description>
        <label>Old Item Specification</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Item_Specification__c.Item__c</field>
                <operation>equals</operation>
                <valueField>$Source.Item__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item_Specification__c</referenceTo>
        <relationshipLabel>ECO Lines (Old Item Specification)</relationshipLabel>
        <relationshipName>ECO_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Revision__c</fullName>
        <description>Old Item Specification&apos;s Revision</description>
        <formula>Old_Item_Specification__r.Revision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Revision</label>
        <type>Text</type>
    </fields>
    <label>ECO Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>ECO Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ECO Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Specification_Start_Dates</fullName>
        <active>true</active>
        <description>New Specification&apos;s Start Date must be after Old Specification&apos;s Start Date</description>
        <errorConditionFormula>New_Item_Specification__r.Start_Date2__c &lt;=  Old_Item_Specification__r.Start_Date2__c</errorConditionFormula>
        <errorDisplayField>New_Item_Specification__c</errorDisplayField>
        <errorMessage>The Start date for the new specification must come after the Start date for the old specification</errorMessage>
    </validationRules>
</CustomObject>